--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "material-file-input",
+  "name": "ngx-material-file-input",
   "version": "2.0.0",
   "license": "MIT",
   "scripts": {
@@ -36,12 +36,12 @@
   "private": false,
   "dependencies": {
     "@angular/animations": "^9.0.0",
-    "@angular/cdk": "^8.1.2",
+    "@angular/cdk": "^9.0.0",
     "@angular/common": "^9.0.0",
     "@angular/compiler": "^9.0.0",
     "@angular/core": "^9.0.0",
     "@angular/forms": "^9.0.0",
-    "@angular/material": "^8.1.2",
+    "@angular/material": "^9.0.0",
     "@angular/platform-browser": "^9.0.0",
     "@angular/platform-browser-dynamic": "^9.0.0",
     "@angular/router": "^9.0.0",
